<resources>
    <string name="app_name" translatable="false">GeoHis</string>
    <string name="medhis" translatable="false">Ancient  History</string>
    <string name="play" translatable="false">PLAY!</string>
    <string name="nickname" translatable="false">abobus_17</string>
    <string name="medieval_history" translatable="false">Medieval History</string>
    <string name="modern_history" translatable="false">Modern History</string>
    <string name="general_geography" translatable="false">General Geography</string>
    <string name="ancient_history" translatable="false">Ancient History</string>
    <string name="train_your_memory" translatable="false">Train Your Memory</string>
    <string name="events_on_map" translatable="false">Events on Map</string>
    <string name="map" translatable="false">Map</string>
    <string name="profile_settings" translatable="false">Profile Settings</string>
    <string name="language" translatable="false">Language</string>
    <string name="sounds" translatable="false">Sounds</string>
    <string name="how_to_play" translatable="false">How To Play</string>
    <string name="help" translatable="false">Help</string>
    <string name="germany" translatable="false">Germany</string>
    <string name="bulgaria" translatable="false">Bulgaria</string>
    <string name="belgium" translatable="false">Belgium</string>
    <string name="italy" translatable="false">Italy</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="rating" translatable="false">Rating</string>
    <string name="menu" translatable="false">Menu</string>
    <string name="ForImage" translatable="false">ForImage</string>
    <string name="kyrgyzstan" translatable="false">Kyrgyzstan</string>
    <string name="china" translatable="false">China</string>
    <string name="kazakhstan" translatable="false">Kazakhstan</string>
    <string name="russia" translatable="false">Russia</string>
    <string name="try_again" translatable="false">Try Again</string>
    <string name="you_lose" translatable="false">You lose!</string>
    <string name="n1" translatable="false">#1</string>
    <string name="n2" translatable="false">#2</string>
    <string name="n3" translatable="false">#3</string>
    <string name="randmoj" translatable="false">deny</string>
    <string name="image1" translatable="false">arrow</string>
    <string name="Profile" translatable="false">Profile</string>
    <string name="Rating" translatable="false">Rating</string>
    <string name="title_activity_main2" translatable="false">MainActivity2</string>
    <string name="title_activity_secondactivity" translatable="false">Secondactivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="title_activity_nav" translatable="false">nav</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_activity_main_activitynav" translatable="false">MainActivitynav</string>
    <string name="title_activity_main_nav" translatable="false">MainActivityNav</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
</resources>