<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellowGH">


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="15dp">

            <Button
                style="@style/medium"
                android:layout_width="310dp"
                android:layout_height="80dp"
                android:background="@drawable/button_bg1"
                android:text="@string/try_again"
                android:gravity="center"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp">

            <Button
                style="@style/medium"
                android:layout_width="310dp"
                android:layout_height="80dp"
                android:background="@drawable/button_bg1"
                android:text="@string/menu"
                android:gravity="center"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
        app:layout_constraintStart_toStartOf="@+id/linearLayout5"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lose"
        android:contentDescription="@string/ForImage"/>

    <TextView
        android:id="@+id/textView"
        style="@style/medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/you_lose"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>