<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/yellowGH">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/button"
            style="@style/TextViewPrimary2"
            android:fontFamily="@font/ranchers"
            android:text="@string/china" />

        <Button
            android:id="@+id/button2"
            style="@style/TextViewPrimary2"
            android:text="@string/kyrgyzstan"
            android:fontFamily="@font/ranchers"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button3"
            style="@style/TextViewPrimary2"
            android:text="@string/kazakhstan"
            android:fontFamily="@font/ranchers"/>

        <Button
            android:id="@+id/button4"
            style="@style/TextViewPrimary2"
            android:text="@string/russia"
            android:fontFamily="@font/ranchers"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/arrow"
            android:contentDescription="@string/ForImage"/>

        <ImageView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            app:srcCompat="@drawable/lvl"
            android:contentDescription="@string/ForImage"/>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/heart"
                android:contentDescription="@string/ForImage"/>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/heart"
                android:contentDescription="@string/ForImage"/>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/heart"
                android:contentDescription="@string/ForImage"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image"
        android:contentDescription="@string/ForImage"/>


</androidx.constraintlayout.widget.ConstraintLayout>